# bridge_data_robot

./: .gitignore  README.md  bridge_data.rviz  build_docker.sh  compliant_wx250s.yaml  docker-compose.yml  generate_usb_config.sh  launch_docker.sh  launch_server.sh  requirements.txt  test_robot.sh  widowx_env_service.py
code/bridge_data_v2/: Dockerfile
code/bridge_data_v2/experiments/: eval.py
test_utils/: count_progress.py  plot-mic.py  read-ip.py  test-cam.py  test-server.py
widowx_envs/: Dockerfile  README.md  curr_ip.py  requirements.txt  ros_key.txt  run_scripted_pickplace.py  setup.py  widowx_env_service.py
widowx_envs/experiments/bridge_data_v2/: conf.py
widowx_envs/multicam_server/: package.xml
widowx_envs/multicam_server/launch/: cameras.launch  imu_streamer.launch  mic_streamer.launch  overhead_streamer.launch  (+2 more)
widowx_envs/scripts/: Tic_Tac_Toe_Planner.py  ViLD.py  ViLD_tester.py  ViLD_tester_pickplace.py  ViLD_w_viz.py  calibrate_camera.py  calibrate_camera_new.py  go_to_neutral_pose.py  go_to_sleep_pose.py  integration.py  integration_test.py  play_ttt_scripted_pickplace.py  run.sh  run_scripted_pickplace.py  run_scripted_pickplace_new.py  scripted_pickplace.py  test.py
widowx_envs/widowx_controller/: CMakeLists.txt  package.xml  setup.py
widowx_envs/widowx_controller/launch/: widowx_rs.launch
widowx_envs/widowx_controller/src/widowx_controller/: controller_base.py  custom_gripper_controller.py  velocity_controller.py  vr_controller_client.py  vr_controller_server.py  widowx_controller.py  widowx_controller2.py
widowx_envs/widowx_envs/: control_loops.py  run_data_collection.py  teleop.py  trajectory_collector.py  widowx_env.py  widowx_env_service.py
widowx_envs/widowx_envs/multicam_server/: CMakeLists.txt  setup.py
widowx_envs/widowx_envs/multicam_server/src/: camera_recorder.py  start_streamers.py
(+41 files in other folders)
